src/objects/DS_CBCL_B__c.object
<CustomObject>
    <fields>
        <fullName>BCBABPY__c</fullName>
        <description>CBCL Aggressive Behavior percent</description>
        <label>BCBABPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBABP__c</fullName>
        <description>CBCL Aggressive Behavior percent</description>
        <label>BCBABP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBABRNY__c</fullName>
        <description>CBCL Aggressive Behavior raw score - Num</description>
        <label>BCBABRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBABRN__c</fullName>
        <description>CBCL Aggressive Behavior raw score - Num</description>
        <label>BCBABRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBABRY__c</fullName>
        <description>CBCL Aggressive Behavior raw score</description>
        <label>BCBABRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBABR__c</fullName>
        <description>CBCL Aggressive Behavior raw score</description>
        <label>BCBABR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBABSY__c</fullName>
        <description>CBCL Aggressive Behavior clinical significance</description>
        <label>BCBABSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBABS__c</fullName>
        <description>CBCL Aggressive Behavior clinical significance</description>
        <label>BCBABS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBABTNY__c</fullName>
        <description>CBCL Aggressive Behavior T score - Num</description>
        <label>BCBABTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBABTN__c</fullName>
        <description>CBCL Aggressive Behavior T score - Num</description>
        <label>BCBABTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBABTY__c</fullName>
        <description>CBCL Aggressive Behavior T score</description>
        <label>BCBABTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBABT__c</fullName>
        <description>CBCL Aggressive Behavior T score</description>
        <label>BCBABT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBADPY__c</fullName>
        <description>CBCL Anxious Depressed percent</description>
        <label>BCBADPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBADP__c</fullName>
        <description>CBCL Anxious Depressed percent</description>
        <label>BCBADP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBADRNY__c</fullName>
        <description>CBCL Anxious Depressed raw score - Num</description>
        <label>BCBADRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBADRN__c</fullName>
        <description>CBCL Anxious Depressed raw score - Num</description>
        <label>BCBADRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBADRY__c</fullName>
        <description>CBCL Anxious Depressed raw score</description>
        <label>BCBADRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBADR__c</fullName>
        <description>CBCL Anxious Depressed raw score</description>
        <label>BCBADR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBADSY__c</fullName>
        <description>CBCL Anxious Depressed clinical significance</description>
        <label>BCBADSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBADS__c</fullName>
        <description>CBCL Anxious Depressed clinical significance</description>
        <label>BCBADS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBADTNY__c</fullName>
        <description>CBCL Anxious Depressed T score - Num</description>
        <label>BCBADTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBADTN__c</fullName>
        <description>CBCL Anxious Depressed T score - Num</description>
        <label>BCBADTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBADTY__c</fullName>
        <description>CBCL Anxious Depressed T score</description>
        <label>BCBADTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBADT__c</fullName>
        <description>CBCL Anxious Depressed T score</description>
        <label>BCBADT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPPCNY__c</fullName>
        <defaultValue>1</defaultValue>
        <label>BCBAPPCNY</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBAPPCN__c</fullName>
        <defaultValue>1</defaultValue>
        <label>BCBAPPCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBAPPCY__c</fullName>
        <formula>IF( BCBAPPCNY__c = 1 , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BCBAPPCY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPPC__c</fullName>
        <formula>IF( BCBAPPCN__c = 1 , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BCBAPPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPPY__c</fullName>
        <description>CBCL Attention problems percent</description>
        <label>BCBAPPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPP__c</fullName>
        <description>CBCL Attention problems percent</description>
        <label>BCBAPP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPRNY__c</fullName>
        <description>CBCL Attention problems raw score - Num</description>
        <label>BCBAPRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBAPRN__c</fullName>
        <description>CBCL Attention problems raw score - Num</description>
        <label>BCBAPRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBAPRY__c</fullName>
        <description>CBCL Attention problems raw score</description>
        <label>BCBAPRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPR__c</fullName>
        <description>CBCL Attention problems raw score</description>
        <label>BCBAPR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPSY__c</fullName>
        <description>CBCL Attention problems clinical significance</description>
        <label>BCBAPSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPS__c</fullName>
        <description>CBCL Attention problems clinical significance</description>
        <label>BCBAPS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPTNY__c</fullName>
        <description>CBCL Attention problems T score - Num</description>
        <label>BCBAPTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBAPTN__c</fullName>
        <description>CBCL Attention problems T score - Num</description>
        <label>BCBAPTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBAPTY__c</fullName>
        <description>CBCL Attention problems T score</description>
        <label>BCBAPTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBAPT__c</fullName>
        <description>CBCL Attention problems T score</description>
        <label>BCBAPT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBEBPY__c</fullName>
        <description>CBCL Externalizing behavior percent</description>
        <label>BCBEBPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBEBP__c</fullName>
        <description>CBCL Externalizing behavior percent</description>
        <label>BCBEBP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBEBRNY__c</fullName>
        <description>CBCL Externalizing behavior raw score - Num</description>
        <label>BCBEBRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBEBRN__c</fullName>
        <description>CBCL Externalizing behavior raw score - Num</description>
        <label>BCBEBRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBEBRY__c</fullName>
        <description>CBCL Externalizing behavior raw score</description>
        <label>BCBEBRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBEBR__c</fullName>
        <description>CBCL Externalizing behavior raw score</description>
        <label>BCBEBR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBEBSY__c</fullName>
        <description>CBCL Externalizing behavior clinical significance</description>
        <label>BCBEBSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBEBS__c</fullName>
        <description>CBCL Externalizing behavior clinical significance</description>
        <label>BCBEBS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBEBTNY__c</fullName>
        <description>CBCL Externalizing behavior T score - Num</description>
        <label>BCBEBTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBEBTN__c</fullName>
        <description>CBCL Externalizing behavior T score - Num</description>
        <label>BCBEBTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBEBTY__c</fullName>
        <description>CBCL Externalizing behavior T score</description>
        <label>BCBEBTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBEBT__c</fullName>
        <description>CBCL Externalizing behavior T score</description>
        <label>BCBEBT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBERPY__c</fullName>
        <description>CBCL Emotionally reactive percent</description>
        <label>BCBERPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBERRNY__c</fullName>
        <description>CBCL Emotionally reactive raw score - Num</description>
        <label>BCBERRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBERRY__c</fullName>
        <description>CBCL Emotionally reactive raw score</description>
        <label>BCBERRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBERSY__c</fullName>
        <description>CBCL Emotionally reactive clinical significance</description>
        <label>BCBERSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBERTNY__c</fullName>
        <description>CBCL Emotionally reactive T score - Num</description>
        <label>BCBERTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBERTY__c</fullName>
        <description>CBCL Emotionally reactive T score</description>
        <label>BCBERTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBIBPY__c</fullName>
        <description>CBCL Internalizing behavior percent</description>
        <label>BCBIBPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBIBP__c</fullName>
        <description>CBCL Internalizing behavior percent</description>
        <label>BCBIBP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBIBRNY__c</fullName>
        <description>CBCL Internalizing behavior raw score - Num</description>
        <label>BCBIBRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBIBRN__c</fullName>
        <description>CBCL Internalizing behavior raw score - Num</description>
        <label>BCBIBRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBIBRY__c</fullName>
        <description>CBCL Internalizing behavior raw score</description>
        <label>BCBIBRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBIBR__c</fullName>
        <description>CBCL Internalizing behavior raw score</description>
        <label>BCBIBR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBIBSY__c</fullName>
        <description>CBCL Internalizing behavior clinical significance</description>
        <label>BCBIBSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBIBS__c</fullName>
        <description>CBCL Internalizing behavior clinical significance</description>
        <label>BCBIBS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBIBTNY__c</fullName>
        <description>CBCL Internalizing behavior T score - Num</description>
        <label>BCBIBTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBIBTN__c</fullName>
        <description>CBCL Internalizing behavior T score - Num</description>
        <label>BCBIBTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBIBTY__c</fullName>
        <description>CBCL Internalizing behavior T score</description>
        <label>BCBIBTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBIBT__c</fullName>
        <description>CBCL Internalizing behavior T score</description>
        <label>BCBIBT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBO100__c</fullName>
        <description>Trouble sleeping</description>
        <label>BCBO100</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO101__c</fullName>
        <description>Truancy, skips school</description>
        <label>BCBO101</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO102__c</fullName>
        <description>Underactive, slow moving, or lacks energy</description>
        <label>BCBO102</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO113S__c</fullName>
        <description>Other1 specify</description>
        <label>BCBO113S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBO114S__c</fullName>
        <description>Other2 specify</description>
        <label>BCBO114S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBO115S__c</fullName>
        <description>Other3 specify</description>
        <label>BCBO115S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBO56A__c</fullName>
        <description>Aches or pains (not stomach or headaches)</description>
        <label>BCBO56A</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO56B__c</fullName>
        <description>Headaches</description>
        <label>BCBO56B</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO56C__c</fullName>
        <description>Nausea, feels sick</description>
        <label>BCBO56C</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO56D__c</fullName>
        <description>Problems with eyes (not if corrected by glasses)</description>
        <label>BCBO56D</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO56E__c</fullName>
        <description>Rashes or other skin problems</description>
        <label>BCBO56E</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO56F__c</fullName>
        <description>Stomachaches</description>
        <label>BCBO56F</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO56G__c</fullName>
        <description>Vomiting, throwing up</description>
        <label>BCBO56G</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBO56HS__c</fullName>
        <description>Other, please describe</description>
        <label>BCBO56HS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBO56H__c</fullName>
        <description>Other</description>
        <label>BCBO56H</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBOMETH__c</fullName>
        <description>Administration Method - CBCLOLD</description>
        <label>BCBOMETH</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCBOTPNY__c</fullName>
        <label>BCBOTPNY</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBOTPN__c</fullName>
        <label>BCBOTPN</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBRBP__c</fullName>
        <description>CBCL Rule breaking percent</description>
        <label>BCBRBP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBRBRN__c</fullName>
        <description>CBCL Rule breaking raw score - Num</description>
        <label>BCBRBRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBRBR__c</fullName>
        <description>CBCL Rule breaking raw score</description>
        <label>BCBRBR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBRBS__c</fullName>
        <description>CBCL Rule breaking clinical significance</description>
        <label>BCBRBS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBRBTN__c</fullName>
        <description>CBCL Rule breaking T score - Num</description>
        <label>BCBRBTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBRBT__c</fullName>
        <description>CBCL Rule breaking T score</description>
        <label>BCBRBT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSCPY__c</fullName>
        <description>CBCL Somatic complaints percent</description>
        <label>BCBSCPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSCP__c</fullName>
        <description>CBCL Somatic complaints percent</description>
        <label>BCBSCP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSCRNY__c</fullName>
        <description>CBCL Somatic complaints raw score - Num</description>
        <label>BCBSCRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSCRN__c</fullName>
        <description>CBCL Somatic complaints raw score - Num</description>
        <label>BCBSCRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSCRY__c</fullName>
        <description>CBCL Somatic complaints raw score</description>
        <label>BCBSCRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSCR__c</fullName>
        <description>CBCL Somatic complaints raw score</description>
        <label>BCBSCR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSCSY__c</fullName>
        <description>CBCL Somatic complaints clinical significance</description>
        <label>BCBSCSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSCS__c</fullName>
        <description>CBCL Somatic complaints clinical significance</description>
        <label>BCBSCS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSCTNY__c</fullName>
        <description>CBCL Somatic complaints T score - Num</description>
        <label>BCBSCTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSCTN__c</fullName>
        <description>CBCL Somatic complaints T score - Num</description>
        <label>BCBSCTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSCTY__c</fullName>
        <description>CBCL Somatic complaints T score</description>
        <label>BCBSCTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSCT__c</fullName>
        <description>CBCL Somatic complaints T score</description>
        <label>BCBSCT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSECTIONNY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BCBSECTIONNY</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSECTIONN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BCBSECTIONN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSECTIONY__c</fullName>
        <formula>IF(BCBSECTIONNY__c = 0, &apos;Baseline&apos;, &apos;Follow-up &apos; &amp; TEXT(BCBSECTIONNY__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BCBSECTIONY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSECTION__c</fullName>
        <formula>IF(BCBSECTIONN__c = 0, &apos;Baseline&apos;, &apos;Follow-up &apos; &amp; TEXT(BCBSECTIONN__c))</formula>
        <label>BCBSECTION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSOP__c</fullName>
        <description>CBCL Social problems percent</description>
        <label>BCBSOP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSORN__c</fullName>
        <description>CBCL Social problems raw score - Num</description>
        <label>BCBSORN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSOR__c</fullName>
        <description>CBCL Social problems raw score</description>
        <label>BCBSOR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSOS__c</fullName>
        <description>CBCL Social problems clinical significance</description>
        <label>BCBSOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSOTN__c</fullName>
        <description>CBCL Social problems T score - Num</description>
        <label>BCBSOTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSOT__c</fullName>
        <description>CBCL Social problems T score</description>
        <label>BCBSOT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSPPY__c</fullName>
        <description>CBCL Sleep problems percent</description>
        <label>BCBSPPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSPRNY__c</fullName>
        <description>CBCL Sleep problems raw score - Num</description>
        <label>BCBSPRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSPRY__c</fullName>
        <description>CBCL Sleep problems raw score</description>
        <label>BCBSPRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSPSY__c</fullName>
        <description>CBCL Sleep problems clinical significance</description>
        <label>BCBSPSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBSPTNY__c</fullName>
        <description>CBCL Sleep problems T score - Num</description>
        <label>BCBSPTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBSPTY__c</fullName>
        <description>CBCL Sleep problems T score</description>
        <label>BCBSPTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTPP__c</fullName>
        <description>CBCL Thought problems percent</description>
        <label>BCBTPP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTPRN__c</fullName>
        <description>CBCL Thought problems raw score - Num</description>
        <label>BCBTPRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBTPR__c</fullName>
        <description>CBCL Thought problems raw score</description>
        <label>BCBTPR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTPS__c</fullName>
        <description>CBCL Thought problems clinical significance</description>
        <label>BCBTPS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTPTN__c</fullName>
        <description>CBCL Thought problems T score - Num</description>
        <label>BCBTPTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBTPT__c</fullName>
        <description>CBCL Thought problems T score</description>
        <label>BCBTPT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTSPY__c</fullName>
        <description>CBCL Total percent</description>
        <label>BCBTSPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTSP__c</fullName>
        <description>CBCL Total percent</description>
        <label>BCBTSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCBTSRNY__c</fullName>
        <description>CBCL Total raw score - Num</description>
        <label>BCBTSRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBTSRN__c</fullName>
        <description>CBCL Total raw score - Num</description>
        <label>BCBTSRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCBTSRY__c</fullName>
        <description>CBCL Total raw score</description>
        <label>BCBTSRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>